  back to 1.0).

--When triggering unlock of iron veins due to a primary homeland, we only count
  it as a primary homeland if it taps out at least one iron vein.  Thus, if a
  family makes a bad choice for their first well in an area with no iron veins,
  they can move later to a spot with iron veins and unlock them with a new well
  site.  Fixes #590




Version 326     2020-April-9

--Editor search boxes now allow -term to avoid objects with term in the name.




Server Fixes

--When adding an Eve due to a race dying out or all families being too
  high-generation, we wait for a player with a fitness score equal to or
  greater than the last 10 unique players that were born.  This window size is
  a live server setting.  You can no longer spam /DIE when you know a new Eve
  is about to be placed to give yourself a high chance of being Eve, nor can
  you hold and daisy-chain Eve by blocking your own fertility as Eve and 
  killing yourself at 40 to jump right back in to Eve in the same race.
  Fixes #581

--Now that towns are closer together, base curseBlockRadius reduced to 50
  (was 100).  Fixes #705

--Fixed so that players sent to donkeytown don't get a curse token to spend.
  Fixes #587




Version 324     2020-April-2

--Arrow to biome expert lasts 3 minutes (was 1 minute).

--Touching an expert waystone points you to a very close expert (<32 away), if
  a close one exists, OR to the well site in a populated expert homeland.  No
  more wild goose chase for a lone expert out in the wilderness who will
  probably be gone by the time you get there (or who may be walking away from
  you as you try to approach them).




Server Fixes

--Max baby/adult and baby/mom ratio, which trigger force Eve spawns, are now
  live server settings.  Trying max baby/mom of 2 (was 3) to reduce baby
  overload after server restart.

--Fixed drop-in-bad-biome trick with vehicles.  Fixes #694

--Added support for transitions that end with a floor in hand, meaning that